# raytracing

Assignment 1/: AUTHORS  Makefile  Makefile.in  README.md  aclocal.m4  config.h  config.status  configure  configure.ac
Assignment 1/autom4te.cache/: output.0  requests  traces.0  traces.1
Assignment 1/driver/: Makefile  Makefile.am  Makefile.in  interaction.cpp  interaction.cpp.save  interaction.h  main.cpp
Assignment 1/driver/.deps/: cmdline.Po  interaction.Po  main.Po
Assignment 1/gi/: Makefile  Makefile.in  primary-hit.cpp  primary-hit.h
Assignment 1/gi/.deps/: primary-hit.Po
Assignment 1/libgi/: Makefile  Makefile.in  camera.cpp  context.h  intersect.h  random.h  rt.h  scene.h  util.h
Assignment 1/libgi/.deps/: libgi_a-algorithm.Po  libgi_a-camera.Po  libgi_a-context.Po  libgi_a-framebuffer.Po  libgi_a-random.Po  libgi_a-rt.Po  libgi_a-scene.Po  libgi_a-timer.Po
Assignment 1/render-data/: brdf-test-noal.mtl
Assignment 1/rt/: Makefile  Makefile.am  Makefile.in
Assignment 1/rt/seq/: Makefile  Makefile.in  seq.cpp
Assignment 1/scripts/: Makefile  Makefile.am  Makefile.in  a1-tri
Assignment 2/rtgi-2021-a02/: Makefile  Makefile.am  config.h  config.status  configure  configure.ac  rtgi
Assignment 2/rtgi-2021-a02/driver/: Makefile  interaction.cpp  main.cpp
Assignment 2/rtgi-2021-a02/gi/: Makefile  Makefile.am  primary-hit.cpp
Assignment 2/rtgi-2021-a02/libgi/: Makefile  Makefile.am  Makefile.in  algorithm.cpp  camera.cpp  camera.h  color.h  context.cpp  intersect.h  material.h  rt.cpp  scene.cpp
Assignment 2/rtgi-2021-a02/libgi/.deps/: libgi_a-algorithm.Po  libgi_a-camera.Po  libgi_a-scene.Po
Assignment 2/rtgi-2021-a02/render-data/: brdf-test.mtl
Assignment 2/rtgi-2021-a02/rt/: Makefile
Assignment 3/rtgi-2021-a03/: config.h.in  configure  configure.ac
Assignment 3/rtgi-2021-a03-ref/: Makefile.in  configure  configure.ac
Assignment 3/rtgi-2021-a03/driver/: Makefile.am  Makefile.in  interaction.cpp  main.cpp
Assignment 3/rtgi-2021-a03/gi/: primary-hit.cpp
Assignment 3/rtgi-2021-a03/libgi/: Makefile.am  algorithm.h  framebuffer.cpp  framebuffer.h  intersect.h  material.cpp  material.h  random.cpp  scene.cpp  scene.h  timer.cpp  util.h
Assignment 3/rtgi-2021-a03/render-data/: mis.mtl
Assignment 3/rtgi-2021-a03/rt/: Makefile.am
Assignment 3/rtgi-2021-a03/rt/bbvh-base/: Makefile.in  bvh.cpp  bvh.h
Assignment 3/rtgi-2021-a03/rt/seq/: Makefile.am  Makefile.in  seq.cpp
Assignment 3/rtgi-2021-a03/scripts/: Makefile.am  Makefile.in  a2-sponza
(+38 files in other folders)
